--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("h.jpeg") no-repeat center;
+    background: url("t.jpg") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
